fixed the pointer style of mega-tab

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -508,6 +508,7 @@ td {
 .mega-tab {
     width: 100%;
     text-align: center;
+    cursor:pointer;
 }
 .mega-tab.current {
     background-color: #c5e1e9;
