--- a/layouts/partials/meganav.html
+++ b/layouts/partials/meganav.html
@@ -116,7 +116,7 @@
 
             <ul class="mega-list" role="list">
         {{- range .Pages }}
-                <li role="presentation"><a role="listitem" class="mega-list-item" href="{{.RelPermalink}}">{{- partial "title" . }}</a></li>
+                <li class="mega-list-line" role="presentation"><a class="mega-list-item" role="listitem" href="{{.RelPermalink}}">{{- partial "title" . }}</a></li>
         {{- end }}
             </ul>
         </div>
