灰色背景から画像がはみ出す件を修正

--- a/static/stylesheets/custom_gr.css
+++ b/static/stylesheets/custom_gr.css
@@ -422,16 +422,16 @@ background: rgba(255, 255, 255, 0.9);
     .header .searchbox input {
         font-size: 1.2rem;
     }
-    
+
     .current-lang {
         padding-top: 6px;
     }
     .current-lang .fas {
         margin-top: 6px;
     }
-    
+
     .article h2 {
-        font-size:2.063em;      
+        font-size:2.063em;
     }
     .article h3 {
         font-size: 1.62em;
@@ -439,6 +439,7 @@ background: rgba(255, 255, 255, 0.9);
     .article h4 {
         font-size: 1.25em;
     }
+
     .footer{
         position: absolute;
     }
@@ -459,10 +460,6 @@ background: rgba(255, 255, 255, 0.9);
 
 /* 1059px以上の設定  *************************************************************/
 @media only screen and (min-width: 1180px) {
-    .search-wrap {
-
-    }
-
     .top-title {
         padding: 1.5em 0 1.5em 0;
         font-size: 3em;
@@ -470,6 +467,9 @@ background: rgba(255, 255, 255, 0.9);
 
     .article img.screenshot {
         max-width: 600px;
+    }
+    .article .graynote img.screenshot {
+        max-width: 100%;
     }
 }
 
