--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -358,6 +358,7 @@ td {
 }
 .article .inner-index h2{
     border: none;
+    z-index: unset;
 }
 .article .inner-index a{
     text-decoration: none;
