--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -6,8 +6,8 @@
 {{- if eq $.Site.Params.meganav true -}}
     {{ partial "meganav" . }}
 {{- end -}}
-<div class="page">
-    <div class="tree-wrap">
+<div id="page" class="page">
+    <div id="tree" class="tree-wrap">
         {{- if in .RelPermalink "/pdf.html" }}
             {{- if and (eq $.Site.Params.product "Office") (eq $.Site.Params.service_type_id "on-premise") }}
                 {{ partial "treenav" . }}
@@ -18,7 +18,7 @@
             {{ partial "treenav" . }}
         {{- end }}
     </div>
-    <div class="contents-wrap">
+    <div id="contents" class="contents-wrap">
         {{- if and (eq $.Site.Params.product "Garoon") (ne $.Site.Params.languageCode "ja-jp") (ne $.Site.Params.languageCode "ja-cn") }}
             {{ partial "disclaimer" . }}
         {{- end }}
@@ -43,7 +43,6 @@
             </nav>
             {{- end }}
         </main>
-            {{- partial "enquete" . -}}
     </div>
 
     {{- if ne $.Site.Params.meganav true -}}
@@ -53,6 +52,7 @@
     {{- end }}
 </div>
 {{- partial "gototop" . }}
+{{- partial "enquete" . -}}
 {{- partial "footer" . }}
 {{- if and (eq $.Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "JP") }}{{ partial "yahootagmanager" . }}{{- end }}
 {{- end }}
