--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -1,4 +1,4 @@
-<nav class="breadcrumb" role="navigation" aria-label="bread crumb">
+<nav class="breadcrumb" role="navigation" aria-label="{{ i18n "Bread_crumb" }}">
     <ul class="breadcrumbs">
     {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
     </ul>
