--- a/layouts/partials/treenav2.html
+++ b/layouts/partials/treenav2.html
@@ -1,4 +1,4 @@
-<div id="tree-nav" role="navigation" >
+<div id="tree-nav">
     <div id="tree-head">
         <div class="tree-title"><a href="{{.RelPermalink}}">{{- partial "title" . -}}</a></div>
     </div>
