--- a/layouts/partials/drawer.html
+++ b/layouts/partials/drawer.html
@@ -1,4 +1,4 @@
-<nav aria-label="Navigation">
+<nav>
   <div class="wrapper">
   {{- if eq $.Site.Params.meganav true -}}
       {{ partial "nav2" . }}
