--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -1,7 +1,7 @@
 <aside id="enquete">
     <div class="enquete-panel">
       <div>{{ i18n "Was_it_helpful" }}</div>
-      <div>
+      <div class="enquete-btn-wrap">
           <button class="enquete-btn" id="feedback-yes" aria-label='{{ i18n "Yes" }}'>{{ i18n "Yes" }}</button>
           <button class="enquete-btn" id="feedback-no" aria-label='{{ i18n "No" }}'>{{ i18n "No" }}</button>
       </div>
