--- a/layouts/partials/langselector.html
+++ b/layouts/partials/langselector.html
@@ -1,14 +1,17 @@
-<div id="lang-selector" role="listbox" aria-label="language selector" aria-expanded="false" tabindex="0" >
-    <div class="current-lang">
-        <i class="fas fa-globe" aria-hidden="true"></i>
-        <span class="lang-title">{{ .Site.Language.Params.LanguageName }}</span>
-        <i class="fas fa-chevron-down" aria-hidden="true"></i>
-    </div>
-    <div id="alter-lang" class="alter-lang" aria-hidden="true">
-        <ul>
-        {{- range .Translations }}
-            <li role="listitem"><a class="lang-link" href="{{ .RelPermalink }}"><span class="lang-title">{{ .Site.Language.Params.LanguageName }}</span></a></li>
-        {{- end }}
+<div id="lang" class="lang-wrap" aria-label="language selector">
+    <div>
+        <button id="lang-selector" class="current-lang" aria-haspopup="listbox" aria-expanded="false">
+            <i class="fas fa-globe" aria-hidden="true"></i>
+            <span id="displang" class="lang-title">{{ .Site.Language.Params.LanguageName }}</span>
+            <i class="fas fa-chevron-down" aria-hidden="true"></i>
+        </button>
+        <ul id="alter-lang" class="alter-lang" role="listbox" tabindex="-1" aria-hidden="true">
+        <!--
+                <li id="lang_item_{{ .Site.Language.Params.LanguageCode }}" class="lang-item selectlang" role="option" desturl="{{ .RelPermalink }}"><span class="lang-title">{{ .Site.Language.Params.LanguageName }}</span></li>
+                -->
+            {{- range .Translations }}
+                <li id="lang_item_{{ .Site.Language.Params.LanguageCode }}" class="lang-item" role="option" desturl="{{ .RelPermalink }}"><span class="lang-title">{{ .Site.Language.Params.LanguageName }}</span></li>
+            {{- end }}
         </ul>
     </div>
 </div>
