--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -140,8 +140,8 @@
 .col-tile {
   margin: 0 0 16px;
   width: 100%;
+  min-height: 250px;
   padding: .9375rem;
-  height: 223px;
   border: 1px solid #e6e6e6;
   position: relative;
   float: left;
@@ -175,8 +175,16 @@
 
 .col-topics {
     height: 100%;
-    min-height: 223px;
+    min-height: 250px;
     padding-bottom: 9px;
+}
+
+.tile-head {
+    height: 50%;
+    overflow: hidden;
+}
+.tile-head2 {
+    height: 45%;
 }
 
 .tile-title {
@@ -211,8 +219,11 @@
 .tile-text {
     text-align: left;
     padding: 5px;
-    height: 250px;
+    height: 50%;
     overflow: auto;
+}
+.tile-text {
+    height: 55%;
 }
 .tile-text li {
     list-style-type: none;
@@ -252,7 +263,7 @@
 }
 .col-tile-gr2 {
     width: 100%;
-    height: 430px;
+    height: 450px;
     padding: 0;
 }
 .col-tile-gr2 a {
@@ -350,7 +361,7 @@ i.index-pdf {
     }
     .col-tile-gr2 {
         width: 300px;
-        height: 430px;
+        height: 450px;
         margin: 10px 0 10px 0;
     }
 
