remove content check of PDF body

--- a/layouts/print_page/single.html
+++ b/layouts/print_page/single.html
@@ -324,7 +324,7 @@
     {{- $ancid := .ancid -}}
     {{- $lang := .lang -}}
     
-    {{- if and (ne $sectStr "") (ne $cont "") -}}
+    {{- if ne $sectStr "" -}}
     <div class="article">
         <div class="wrapper">
           
